--- a/ShradhaBookStore/Views/Shared/_layoutAdmin.cshtml
+++ b/ShradhaBookStore/Views/Shared/_layoutAdmin.cshtml
@@ -151,6 +151,26 @@
                                 </span>
                                 <span class="hide-menu">Reviews</span>
                             </a>
+                        </li> 
+                        <li class="nav-small-cap">
+                            <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
+                            <span class="hide-menu">Disabled</span>
+                        </li>
+                        <li class="sidebar-item">
+                            <a class="sidebar-link" asp-action="Show_De_Categories" aria-expanded="false">
+                                <span>
+                                    <i class="ti ti-mood-happy"></i>
+                                </span>
+                                <span class="hide-menu">Categories</span>
+                            </a>
+                        </li>
+                        <li class="sidebar-item">
+                            <a class="sidebar-link" asp-action="Show_De_Products" aria-expanded="false">
+                                <span>
+                                    <i class="ti ti-aperture"></i>
+                                </span>
+                                <span class="hide-menu">Products</span>
+                            </a>
                         </li>
                     </ul>
                     @* <div class="unlimited-access hide-menu bg-light-primary position-relative mb-7 mt-5 rounded">
