--- a/ShradhaBookStore/Views/Admin/Show_Products.cshtml
+++ b/ShradhaBookStore/Views/Admin/Show_Products.cshtml
@@ -26,7 +26,7 @@
             <th>Categories</th>
             <th>Price</th>
             <th>Quantity</th>
-            <th>Status</th>
+ 
             <th>Image</th>
             <th>Action</th>
             <th>Featured</th>
@@ -44,17 +44,17 @@
         <td>@e.Category.Name</td>
             <td>@e.Price</td>
             <td>@e.Quantity</td>
-            <td>@e.Status</td>
+ 
             <td class="w-25">
                 <img class="img-fluid w-50" src="~/Images/Products/@e.Image" />
                
             </td>
             <td> <a asp-route-id="@e.Id" asp-action="Deactivate_Product">Deactivate</a> | <a asp-route-id="@e.Id" asp-action="Update_Product">Edit</a></td>
             <td>
-                @if (@e.Status == "Featured")
+                @if (@e.Status == 2)
                 {
                     <a asp-route-id="@e.Id" asp-action="Remove_feature">
-                        <span class="material-symbols-outlined">
+                        <span class="material-symbols-outlined h1 text-success">
                             toggle_on
                         </span>
                     </a>
@@ -63,7 +63,7 @@
                 else
                 {        
                     <a asp-route-id="@e.Id" asp-action="Add_feature">
-                        <span class="material-symbols-outlined">
+                        <span class="material-symbols-outlined text-dark h1">
                             toggle_off
                         </span>
                     </a>
