--- a/ShradhaBookStore/Views/Shared/_layoutAdmin.cshtml
+++ b/ShradhaBookStore/Views/Shared/_layoutAdmin.cshtml
@@ -137,7 +137,7 @@
                             <span class="hide-menu">Others</span>
                         </li>
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="./icon-tabler.html" aria-expanded="false">
+                            <a class="sidebar-link" asp-action="Add_faq" aria-expanded="false">
                                 <span>
                                     <i class="ti ti-mood-happy"></i>
                                 </span>
