--- a/ShradhaBookStore/Views/Shared/_LayoutGuest.cshtml
+++ b/ShradhaBookStore/Views/Shared/_LayoutGuest.cshtml
@@ -72,6 +72,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-action="Faqs">Faqs</a>
+                        </li>
 
                       
 
@@ -104,7 +107,7 @@
                         <span id="cart" class=" translate-middle badge rounded-pill bg-light text-dark">7</span>
                     </a>
                         <a class="nav-link nav-icon-hover" href="javascript:void(0)" id="drop2" data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="~/Images/Users/@ViewData["Image"]" alt="" width="35" height="35" class="rounded-circle">
+                            <img src="~/Images/Users/@ViewData["Image"]" alt="" width="35" height="35" class="rounded-circle img-fluid">
                         </a>
                         <div class="dropdown-menu dropdown-menu-end dropdown-menu-animate-up " aria-labelledby="drop2" data-bs-popper="static">
                                 <div class="message-body">
