Manufacturer Working Done

--- a/ShradhaBookStore/Views/Shared/_layoutAdmin.cshtml
+++ b/ShradhaBookStore/Views/Shared/_layoutAdmin.cshtml
@@ -87,11 +87,11 @@
                             </a>
                         </li>
                         <li class="sidebar-item">
-                            <a class="sidebar-link" asp-action="Add_Manufacturer" aria-expanded="false">
+                            <a class="sidebar-link" asp-action="Manufacturers" aria-expanded="false">
                                 <span>
                                     <i class="ti ti-typography"></i>
                                 </span>
-                                <span class="hide-menu">New Manufacturer</span>
+                                <span class="hide-menu">Manufacturers</span>
                             </a>
                         </li>
                         <li class="nav-small-cap">
@@ -170,6 +170,14 @@
                                     <i class="ti ti-aperture"></i>
                                 </span>
                                 <span class="hide-menu">Products</span>
+                            </a>
+                        </li> 
+                        <li class="sidebar-item">
+                            <a class="sidebar-link" asp-action="Show_De_Manufacturers" aria-expanded="false">
+                                <span>
+                                    <i class="ti ti-aperture"></i>
+                                </span>
+                                <span class="hide-menu">Manufacturers</span>
                             </a>
                         </li>
                     </ul>
