--- a/ShradhaBookStore/Views/Shared/_LayoutGuest.cshtml
+++ b/ShradhaBookStore/Views/Shared/_LayoutGuest.cshtml
@@ -8,20 +8,16 @@
 
     <link rel="apple-touch-icon" href="~/images/apple-icon.png">
     <link rel="shortcut icon" type="image/x-icon" href="~/images/favicon.ico">
-
-    <link rel="stylesheet" href="~/css/bootstrap.css">
     <link rel="stylesheet" href="~/css/templatemo.min.css">
     <link rel="stylesheet" href="~/css/custom.css">
     <!-- Load fonts style after rendering the layout styles -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!--
-        TemplateMo 559 Zay Shop
+    <link rel="stylesheet" href="~/css/bootstrap.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    @* <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> *@
 
-    https://templatemo.com/tm-559-zay-shop
-
-    -->
-    @* <link href="~/css/fontawesome.css" rel="stylesheet" /> *@
 </head>
 
 <body>
@@ -106,22 +102,30 @@
                         <i class="fa fa-fw fa-cart-arrow-down text-dark mr-1"></i>
                         <span id="cart" class=" translate-middle badge rounded-pill bg-light text-dark">7</span>
                     </a>
-                        <a class="nav-link nav-icon-hover" href="javascript:void(0)" id="drop2" data-bs-toggle="dropdown" aria-expanded="false">
+                    //Off Canvas for Notifications
+                    <a data-bs-toggle="offcanvas" data-bs-target="#notification" class="nav-icon position-relative text-decoration-none" href="#">
+                        <i class="fa fa-fw fa-bell text-dark mr-1"></i>
+                        <span id="cart" class=" translate-middle badge rounded-pill bg-light text-dark">7</span>
+                    </a>
+              
+         
+
+                    <a class="nav-link nav-icon-hover" href="javascript:void(0)" id="drop2" data-bs-toggle="dropdown" aria-expanded="false">
                             <img src="~/Images/Users/@ViewData["Image"]" alt="" width="35" height="35" class="rounded-circle img-fluid">
                         </a>
                         <div class="dropdown-menu dropdown-menu-end dropdown-menu-animate-up " aria-labelledby="drop2" data-bs-popper="static">
                                 <div class="message-body">
                     <a href="javascript:void(0)" class="d-flex align-items-center gap-2 dropdown-item">
                       <i class="ti ti-user fs-6"></i>
-                      <p class="mb-0 fs-3">My Profile</p>
+                      <p class="mb-0 fs-5">My Profile</p>
                     </a>
                     <a href="javascript:void(0)" class="d-flex align-items-center gap-2 dropdown-item">
                       <i class="ti ti-mail fs-6"></i>
-                      <p class="mb-0 fs-3">My Account</p>
+                      <p class="mb-0 fs-5">My Account</p>
                     </a>
                     <a href="javascript:void(0)" class="d-flex align-items-center gap-2 dropdown-item">
                       <i class="ti ti-list-check fs-6"></i>
-                      <p class="mb-0 fs-3">My Task</p>
+                      <p class="mb-0 fs-5">My Task</p>
                     </a>
                     <a asp-action="Logout" class="btn btn-outline-primary mx-3 mt-2 d-block">Logout</a>
                   </div>
@@ -154,6 +158,40 @@
                     </button>
                 </div>
             </form>
+        </div>
+    </div>
+    <div class="offcanvas offcanvas-end" id="notification">
+        <div class="offcanvas-header border-bottom border-secondary">
+            <h3 class="offcanvas-title h2">Notifications</h3>
+
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button> 
+        </div>
+        <div class="offcanvas-body">
+            @if (ViewBag.orders != null)
+            {
+                @foreach (var item in ViewBag.orders)
+                {
+                    @if (item.Status == "Delivered")
+                    {
+
+                        <a asp-action="Add_Review" class="text-decoration-none" asp-rout-product_id="@item.ProductId">
+                    <div class="alert alert-info alert-dismissible fade show" role="alert">
+                        <strong>Give a Review..!</strong> Your Order with id "@item.Id" is Delivered SuccessFully .<br /> Click here To Add Review
+                        @* <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button> *@
+                    </div>
+                        </a>
+                    }
+                    else if (item.Status == "Placed")
+                    {
+                        <a asp-action="Add_Review" class="text-decoration-none" asp-rout-product_id="@item.ProductId">
+                            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                                Ordeer Placed SucessFully  , Order id is: "@item.Id" <br /> 
+                                @* <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button> *@
+                            </div>
+                        </a>
+                    }
+                }
+            }
         </div>
     </div>
 
