--- a/ShradhaBookStore/Views/User/Register.cshtml
+++ b/ShradhaBookStore/Views/User/Register.cshtml
@@ -21,8 +21,8 @@
             <div class="d-flex align-items-center justify-content-center w-100">
                 <div class="row justify-content-center w-100">
                     <div class="col-md-8 col-lg-6 col-xxl-3">
-                        <div class="card mb-0">
-                            <div class="card-body">
+                        <div class="card my-3">
+                            <div class="card-body ">
                                 <a href="/" class="text-nowrap logo-img text-center d-block py-3 w-100">
                                     <h2>ShradhaBookStore</h2>
                                 </a>
@@ -164,7 +164,7 @@
                                     <button type="submit" class="btn btn-primary w-100 py-8 fs-4 mb-4 rounded-2">Sign Up</button>
                                     <div class="d-flex align-items-center justify-content-center">
                                         <p class="fs-4 mb-0 fw-bold">Already have an Account?</p>
-                                        <a class="text-primary fw-bold ms-2" href="./authentication-login.html">Sign In</a>
+                                        <a class="text-primary fw-bold ms-2" asp-action="Login">Sign In</a>
                                     </div>
                                 </form>
                             </div>
