--- a/ShradhaBookStore/Views/User/Login.cshtml
+++ b/ShradhaBookStore/Views/User/Login.cshtml
@@ -22,7 +22,7 @@
                     <div class="col-md-8 col-lg-6 col-xxl-3">
                         <div class="card mb-0">
                             <div class="card-body">
-                                <a href="./index.html" class="text-nowrap logo-img text-center d-block py-3 w-100">
+                                <a asp-action="Index" class="text-nowrap logo-img text-center d-block py-3 w-100">
                                     <h2 class="">ShradhaBookStore</h2>
                                 </a>
                                 <p class="text-center">Login</p>
@@ -54,8 +54,8 @@
                                     }
                                     <button type="submit" class="btn btn-primary w-100 py-8 fs-4 mb-4 rounded-2">Sign In</button>
                                     <div class="d-flex align-items-center justify-content-center">
-                                        <p class="fs-4 mb-0 fw-bold">New to Modernize?</p>
-                                        <a class="text-primary fw-bold ms-2" href="./authentication-register.html">Create an account</a>
+    
+                                        <a class="text-primary fw-bold ms-2" asp-action="register">Create an account</a>
                                     </div>
                                 </form>
                             </div>
